<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp" >

        <LinearLayout
            android:id="@+id/first_add_part"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/sms_numbers"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:hint="@string/add_contact_hint"
                android:inputType="phone"
                android:paddingLeft="5sp"
                android:textColor="#000000"
                android:textCursorDrawable="@null" >
            </EditText>

            <ImageButton
                android:id="@+id/add_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:src="@drawable/contact"
                android:text="@string/action_cancel" >
            </ImageButton>
        </LinearLayout>

        <EditText
            android:id="@+id/sms_title"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/first_add_part"
            android:layout_margin="3sp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:paddingLeft="5sp"
            android:textColor="#000000"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:id="@+id/date_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sms_title"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/dateText"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:inputType="date"
                    android:paddingLeft="5sp"
                    android:textColor="#000000" />

                <ImageButton
                    android:id="@+id/dateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3sp"
                    android:src="@drawable/calendar"
                    android:text="@string/date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/timeText"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:inputType="time"
                    android:paddingLeft="5sp"
                    android:textColor="#000000" />

                <ImageButton
                    android:id="@+id/timeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3sp"
                    android:src="@drawable/clock" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/date_time"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sms_message"
                android:layout_width="fill_parent"
                android:layout_height="120sp"
                android:layout_margin="3sp"
                android:layout_weight=".76"
                android:background="@drawable/edit_text_style"
                android:gravity="left|top"
                android:hint="@string/message_hint"
                android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textMultiLine"
                android:paddingLeft="5sp"
                android:scrollbars="vertical"
                android:textColor="#000000"
                android:textCursorDrawable="@null" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".24"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/submit_sms_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3sp"
                    android:layout_weight=".50"
                    android:text="@string/action_submit" />

                <Button
                    android:id="@+id/cancel_sms_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3sp"
                    android:layout_weight=".50"
                    android:text="@string/action_cancel" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>